<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppTheme.Indigo">

  <PreferenceCategory android:title="@string/settings_category_server">
    <EditTextPreference
        android:key="preference_server_address"
        android:title="@string/preference_title_address"
        android:summary="@string/preference_summary_address"
        android:dialogTitle="@string/preference_dialog_address"
        android:defaultValue="@string/preference_value_address" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_category_visual">
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_category_misc">
    <EditTextPreference
        android:key="preference_minimum_signal"
        android:title="@string/preference_title_min_signal"
        android:summary="@string/preference_summary_min_signal"
        android:dialogTitle="@string/preference_dialog_min_signal"
        android:defaultValue="@string/preference_value_min_signal" />
    <EditTextPreference
        android:key="preference_maximum_signal"
        android:title="@string/preference_title_max_signal"
        android:summary="@string/preference_summary_max_signal"
        android:dialogTitle="@string/preference_dialog_max_signal"
        android:defaultValue="@string/preference_value_max_signal" />
    <EditTextPreference
        android:key="preference_discovery_duration"
        android:title="@string/preference_title_discovery_duration"
        android:summary="@string/preference_summary_discovery_duration"
        android:dialogTitle="@string/preference_dialog_discovery_duration"
        android:defaultValue="@string/preference_value_discovery_duration" />
  </PreferenceCategory>

</PreferenceScreen>